<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maths_background"
    tools:context="benediktwillerenejokiel.formelbreaker.StartActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/unitsButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/special_buttonshape"
        android:text="@string/unitsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoritesButton" />

    <Button
        android:id="@+id/constantsButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/special_buttonshape"
        android:text="@string/constants_button_label"
        app:layout_constraintEnd_toStartOf="@+id/unitsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <Button
        android:id="@+id/moreButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/special_buttonshape"
        android:text="@string/more_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chemistryButton"
        app:layout_constraintTop_toBottomOf="@+id/physicsButton" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/special_buttonshape"
        android:text="@string/options_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/favorites_buttonshape"
        android:text="@string/favorites_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <Button
        android:id="@+id/mathsButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/maths_buttonshape"
        android:text="@string/math_button_label"
        app:layout_constraintEnd_toStartOf="@+id/physicsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/physicsButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/physics_buttonshape"
        android:text="@string/physics_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chemistryButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/chemistry_buttonshape"
        android:text="@string/chemistry_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathsButton" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="129dp"
        android:layout_height="50dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/search_buttonshape"
        android:text="@string/search_Button_Label"
        app:layout_constraintEnd_toStartOf="@+id/favoritesButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Formel \nBreaker"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</android.support.constraint.ConstraintLayout>
